fix for the overflow issue with search results

--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -217,12 +217,11 @@ header .header-content .header-content-inner p {
     }
 
     header .header-content {
-        position: absolute;
-        top: 50%;
-        padding: 0 50px;
-        -webkit-transform: translateY(-50%);
+        padding-left: 20%;
+        padding-right: 20%;
+/*        -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
+        transform: translateY(-50%);*/
     }
 
     header .header-content .header-content-inner {
