--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,7 +80,7 @@ header:before {
             font-family: 'Open Sans','Helvetica Neue', sans-serif; 
             font-size: 1.5em; 
             font-weight: bold;
-            width: 3em;
+            width: 2em;
             text-align: center;
         }
 
